<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.solarex.ndp0.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/ndp0_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="buttonClick"
                android:text="@string/main_title"/>

            <Button
                android:id="@+id/main_btn_0"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_0"/>

            <Button
                android:id="@+id/main_btn_1"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_1"/>

            <Button
                android:id="@+id/main_btn_2"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_2"/>

            <Button
                android:id="@+id/main_btn_3"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_3"/>

            <Button
                android:id="@+id/main_btn_4"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_4"/>

            <Button
                android:id="@+id/main_btn_5"
                style="@style/ndp0_text"
                android:layout_width="@dimen/main_btn_width"
                android:layout_height="@dimen/main_btn_height"
                android:onClick="buttonClick"
                android:text="@string/main_btn_5"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
